fix(rjk):update card

--- a/property-rental-main-app/src/app/components/card/card.component.html
+++ b/property-rental-main-app/src/app/components/card/card.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <div class="d-flex flex-column p-4 mx-auto" style="height: 40vh; width: 100%; max-width: 300px;">
+  <div class="d-flex flex-column p-4 mx-auto " style="height: 40vh; max-width:400px;">
     <div class="card shadow-lg rounded overflow-hidden h-100">
       <div class="card-img-top" style="height: 12rem; overflow: hidden;">
         <img [src]="product.propertyCardImage" class="w-100 h-100 object-fit-cover" alt="">
