--- a/property-rental-main-app/src/app/components/request-tourform/request-tourform.component.html
+++ b/property-rental-main-app/src/app/components/request-tourform/request-tourform.component.html
@@ -53,7 +53,7 @@
               </div>
               <div class="form-check">
                 <input type="checkbox" value="Confirm availability" class="form-check-input" id="confirmAvail" />
-                <label class="form-check-label" for="confirmAvail">Confirm availability</label>
+                <label class="form-check-label" for="confirmAvail">Confirm Availability</label>
               </div>
               <div class="form-check">
                 <input type="checkbox" value="Custom Message" class="form-check-input" id="customMessage" />
