--- a/property-rental-main-app/src/app/page/property-map-view/property-map-view.component.html
+++ b/property-rental-main-app/src/app/page/property-map-view/property-map-view.component.html
@@ -43,8 +43,8 @@
     <div class="property-filter mb-6">
       <label class="block text-sm font-medium text-gray-800 mb-3">Furnishing</label>
       <div class="space-y-2">
-        <div class="flex items-center" *ngFor="let option of FurnishingOptions">
-          <input [(ngModel)]="option.checked" (change)="filterProperties('Furnishing',this.FurnishingOptions)" type="checkbox" class="form-checkbox h-5 w-5 text-blue-600" />
+        <div class="flex items-center" *ngFor="let option of furnishingOptions">
+          <input [(ngModel)]="option.checked" (change)="filterProperties('furnishing',this.furnishingOptions)" type="checkbox" class="form-checkbox h-5 w-5 text-blue-600" />
           <span class="ml-2 text-gray-700"> {{ option.label }}</span>
         </div>
       </div>
