fix(rjk):working

--- a/property-rental-main-app/src/app/page/property-media-viewer/property-media-viewer.component.html
+++ b/property-rental-main-app/src/app/page/property-media-viewer/property-media-viewer.component.html
@@ -53,6 +53,7 @@
           <app-image-carousel [data]="propertyFloorPlans"
             [imageStyle]="propertyImageCarouselStyle"></app-image-carousel>
         </div>
+        {{propertyFloorPlans|json}}
       </div>
       <div class="tab-pane fade" id="map" role="tabpanel" aria-labelledby="map-tab">
         <div class="carousel-container">
