--- a/property-rental-main-app/src/app/page/property-data/property-data.component.html
+++ b/property-rental-main-app/src/app/page/property-data/property-data.component.html
@@ -30,5 +30,14 @@
 
   </div>
 </div>
-
+<!-- {{product|json}} -->
+<!-- {{floorplandetails|json}}
+{{propertyunitsdatas|json}}
+{{AboutPropertyTowers|json}}
+{{UniqueFeaturesOfPropertys|json}}
+{{NeighborhoodDatas|json}}
+{{PropertyAmenities|json}}
+{{ApartmentFeatures|json}}
+{{propertySchoolDatas|json}}
+{{contactpropertyboxs|json}} -->
 <!-- ---------rk---- -->
