fix(rjk)working on  frontend

--- a/property-rental-main-app/src/app/components/image-carousel/image-carousel.component.html
+++ b/property-rental-main-app/src/app/components/image-carousel/image-carousel.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="imageCarousel" [id]="imageCarousel.id" class="carousel slide" 
+<!-- <div *ngIf="imageCarousel" [id]="imageCarousel.id" class="carousel slide" 
      (mouseenter)="stopCarousel()" 
      (mouseleave)="startCarousel()" 
      [attr.data-bs-ride]="imageCarousel.id">
@@ -19,5 +19,25 @@
     <span class="visually-hidden">Next</span>
   </button>
 </div>
+ -->
 
-
+ <div *ngIf="data" [id]="data.id" class="carousel slide" 
+ (mouseenter)="stopCarousel()" 
+ (mouseleave)="startCarousel()" 
+ [attr.data-bs-ride]="data.id">
+<div class="carousel-inner">
+<div *ngFor="let image of data.images; let i = index" 
+     class="carousel-item h-100" 
+     [ngClass]="{ 'active': i === currentIndex }">
+  <img [src]="image.url" class="img-fluid" [alt]="image.alt || 'Image'" [style]="imageStyle">
+</div>
+</div>
+<button class="carousel-control-prev" (click)="previousImage()" role="button" aria-label="Previous">
+<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+<span class="visually-hidden">Previous</span>
+</button>
+<button class="carousel-control-next" (click)="nextImage()" role="button" aria-label="Next">
+<span class="carousel-control-next-icon" aria-hidden="true"></span>
+<span class="visually-hidden">Next</span>
+</button>
+</div>
