--- a/property-rental-main-app/src/app/page/property-data/property-data.component.html
+++ b/property-rental-main-app/src/app/page/property-data/property-data.component.html
@@ -11,15 +11,12 @@
       <!--  about property -->
       <div class="about-property pt-5">
         <app-property-data-additional-info [additionalInfo]="AboutPropertyTowers"></app-property-data-additional-info>
-
         <app-property-data-facilities [propertyDetalisList]="UniqueFeaturesOfPropertys"></app-property-data-facilities>
-
         <app-property-data-additional-info [additionalInfo]="NeighborhoodDatas"></app-property-data-additional-info>
-
         <app-property-data-facilities [propertyDetalisList]="PropertyAmenities"></app-property-data-facilities>
-
         <app-property-data-facilities [propertyDetalisList]="ApartmentFeatures"></app-property-data-facilities>
-
+        <app-property-school-card [schoolData]="propertySchoolDatas"></app-property-school-card>
+        <app-property-school-card [schoolData]="propertySchoolDatas"></app-property-school-card>
         <app-property-school-card [schoolData]="propertySchoolDatas"></app-property-school-card>
       </div>
     </div>
@@ -30,14 +27,3 @@
 
   </div>
 </div>
-<!-- {{product|json}} -->
-<!-- {{floorplandetails|json}}
-{{propertyunitsdatas|json}}
-{{AboutPropertyTowers|json}}
-{{UniqueFeaturesOfPropertys|json}}
-{{NeighborhoodDatas|json}}
-{{PropertyAmenities|json}}
-{{ApartmentFeatures|json}}
-{{propertySchoolDatas|json}}
-{{contactpropertyboxs|json}} -->
-<!-- ---------rk---- -->
