--- a/property-rental-main-app/src/app/components/property-data-additional-info/property-data-additional-info.component.html
+++ b/property-rental-main-app/src/app/components/property-data-additional-info/property-data-additional-info.component.html
@@ -1,5 +1,5 @@
 <div class="pt-5">
-  <h2 class=" fs-2 fw-semibold">{{ propertyInfo.heading || "Not Available"}}</h2>
+  <h2 class=" fs-2 fw-semibold">{{ propertyInfo.title || "Not Available"}}</h2>
   <p class="pt-3">
     {{ propertyInfo.description|| "Not Available" }}
   </p>
