--- a/property-rental-main-app/src/app/components/appartment-data/appartment-data.component.html
+++ b/property-rental-main-app/src/app/components/appartment-data/appartment-data.component.html
@@ -1,27 +1,28 @@
+
 <div class="mt-4 border bg-white border-secondary p-4 rounded">
   <div class="d-flex justify-content-between">
     <div>
       <div class="property-location small mb-2 text-muted">
-        {{ apartmentData.locationhierarchy || "Not Available" }}
+        {{ apartmentData.propertyDetails.breadCrumbs || "Not Available" }}
     
       </div>
-      <h1 class="h1 fw-bold">{{ apartmentData.propertyName || "Not Available" }}</h1>
-      <p class="mt-1 h6">{{ apartmentData.propertyLocation || "Not Available" }}</p>
+      <h1 class="h1 fw-bold">{{ apartmentData.propertyDetails.name || "Not Available" }}</h1>
+      <p class="mt-1 h6">  {{ apartmentData.propertyDetails.address.address1 + "," + apartmentData.propertyDetails.address.city || "Not Available" }}</p>
       <div class="mt-2 h5 fw-bold text-secondary">
-        {{ apartmentData.propertyPrice +" "+ "Lakh" || "Not Available"  }}
+        {{ apartmentData.propertyDetails.type || "Not Available"  }}
       </div>
-      <div class="mt-1 text-muted">{{ apartmentData.propertyArea  || "Not Available"}}</div>
+      <div class="mt-1 text-muted">{{ apartmentData.propertyDetails.area  || "Not Available"}}</div>
       <div class="d-flex gap-3 mt-4">
         <button type="button" class="btn btn-primary" data-bs-toggle="modal" [routerLink]="['PropertyMediaView']">
           Floor media
         </button>
       </div>
     </div>
-    <div>
+    <!-- <div>
       <a href="#">
         <div class="rounded bg-cover bg-no-repeat" style="width: 260px; height:100%; background-image: url({{apartmentData.propertyOverViewImage}});"></div>
       </a>
-    </div>
+    </div> -->
   </div>
 
   <div class="mt-4 group">
@@ -35,13 +36,10 @@
     </button>
 
     <div class="hidden group-hover:block mt-4 bg-gray-50 p-4 border rounded-lg">
-      <p class="text-sm font-bold text-gray-900">{{ floorDetails.heading || "Not Available"}}</p>
+      <p class="text-sm font-bold text-gray-900">{{ floorDetails.highlights.title || "Not Available"}}</p>
       <div class="d-flex gap-4 mt-4 text-secondary">
-        <ul class="list-unstyled ps-3 mb-0" *ngFor="let item of floorDetails.features.slice(0, 3)">
-          <li>{{ item.value  || "Not Available"}}</li>
-        </ul>
-        <ul class="list-unstyled ps-3 mb-0" *ngFor="let item of floorDetails.features.slice(3)">
-          <li>{{ item.value  || "Not Available"}}</li>
+        <ul class="list-unstyled ps-3 mb-0">
+          <li>{{ floorDetails.highlights.features  || "Not Available"}}</li>
         </ul>
       </div>
     </div>
@@ -50,34 +48,35 @@
   <div class="mt-4">
     <p class="h5 fw-bold mb-3">Units Available</p>
     <hr class="mb-3" />
-
     <details class="border rounded p-3">
       <summary class="d-flex justify-content-between fw-semibold">
-        <span *ngFor="let item of unitData.propertyunitscol" class="text-dark">
-          {{ item.value || "Not Available" }}
+        <!-- Column Headers -->
+        <span *ngFor="let col of unitData.cols" class="text-dark">
+          {{ col || "Not Available" }}
         </span>
       </summary>
     </details>
-
+    
     <div class="mt-4">
-      <details class="border rounded p-3 mb-3" *ngFor="let item of unitData.unitsdata">
+      <!-- Unit Rows -->
+      <details class="border rounded p-3 mb-3" *ngFor="let item of unitData.rows">
         <summary class="d-flex justify-content-between text-primary fw-bold cursor-pointer">
           <span>{{ item.unit || "Not Available" }}</span>
-          <span>{{ item.price  || "Not Available"}}</span>
-          <span>{{ item.squarefit|| "Not Available"}}</span>
-          <span>{{ item.availability|| "Not Available" }}</span>
+          <span>{{ item.price || "Not Available" }}</span>
+          <span>{{ item.usableArea + ' ' + item.measureUnit || "Not Available" }}</span>
+          <span>{{ item.availabilFrom || "Not Available" }}</span>
         </summary>
         <div class="mt-3 text-muted small">
           <p class="fw-bold">Highlights:</p>
           <ul class="row list-unstyled g-2">
-            <li class="col-6" *ngFor="let data of item.features">
-              {{ data.value|| "Not Available" }}
+            <li class="col-6" *ngFor="let data of item.highlights">
+              {{ data || "Not Available" }}
             </li>
           </ul>
           <p class="mt-3 fw-bold">Kitchen Features:</p>
           <ul class="row list-unstyled g-2">
-            <li class="col-6" *ngFor="let data of item.kitchenFeatures">
-              {{ data.value || "Not Available"}}
+            <li class="col-6" *ngFor="let data of item.kitchen">
+              {{ data || "Not Available" }}
             </li>
           </ul>
         </div>
