--- a/property-rental-main-app/src/app/components/send-message/send-message.component.html
+++ b/property-rental-main-app/src/app/components/send-message/send-message.component.html
@@ -2,7 +2,7 @@
   <div class="modal-dialog modal-lg modal-dialog-centered">
     <div class="modal-content">
       <div class="modal-header bg-light">
-        <h5 class="modal-title fw-semibold text-dark" id="fileModalLabel">{{propertyInfo.propertyName}}</h5>
+        <h5 class="modal-title fw-semibold text-dark" id="fileModalLabel">{{propertyInfo.propertyDetails.name}}</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
