fix(rjk):clean-up

--- a/property-rental-main-app/src/app/page/property-data/property-data.component.html
+++ b/property-rental-main-app/src/app/page/property-data/property-data.component.html
@@ -13,7 +13,7 @@
       <!--  about property -->
       <div class="about-property pt-5">
         <app-property-data-additional-info [additionalInfo]="aboutProperty"></app-property-data-additional-info>
-        <app-property-data-facilities [propertyDetalisList]="propertyFeatures"></app-property-data-facilities>
+        <app-property-data-facilities [propertyDetalisList]="apartmentFeatures"></app-property-data-facilities>
         <app-property-data-additional-info [additionalInfo]="propertyNeighborHood"></app-property-data-additional-info>
         <app-property-school-card [schoolData]="propertyEducation" ></app-property-school-card>
         <app-property-school-card [schoolData]="transportations" ></app-property-school-card>
