--- a/property-rental-main-app/src/app/components/contact-property/contact-property.component.html
+++ b/property-rental-main-app/src/app/components/contact-property/contact-property.component.html
@@ -1,30 +1,39 @@
 <!-- Contact Form -->
 <aside class="form" style="width: 20rem; position: fixed; bottom: 1rem; right: 0.2rem;">
-  <div class="bg-light shadow rounded p-4 ">
+  <div class="bg-light shadow-lg rounded-lg p-4">
     <div id="contactLead" class="d-flex flex-column justify-content-between h-100">
       <!-- Heading -->
-      <h2 class="text-center text-secondary mb-3">
-        <!-- {{propertyContactData.heading || "Not Available"}} -->
+      <h2 class="text-center text-primary mb-4 font-weight-bold">
         Contact {{propertyContactData.propertyDetails.name}}
       </h2>
 
       <!-- Buttons -->
       <div class="d-grid gap-3">
-        <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#requestTour">
-        Send Message
+        <button class="btn btn-primary btn-lg shadow-sm" data-bs-toggle="modal" data-bs-target="#requestTour">
+          <i class="fas fa-envelope me-2"></i>Send Message
         </button>
-        <button class="btn btn-success" data-bs-toggle="modal" data-bs-target="#sendMessage">
-        Request Tour
+        <button class="btn btn-success btn-lg shadow-sm" data-bs-toggle="modal" data-bs-target="#sendMessage">
+          <i class="fas fa-calendar-alt me-2"></i>Request Tour
         </button>
       </div>
-
-      <!-- Phone Number -->
-      <h2 class="text-center mt-4 text-blue-400">
-        {{propertyContactData.propertyDetails.contactUs.phone || 'Number Not Available'}}
-      </h2>
-      <h2 class="text-center text-secondary mt-2">
-        {{propertyContactData.propertyDetails.contactUs.email || 'Number Not Available'}}
-      </h2>
+      <hr>
+      <!-- Contact Information -->
+      <div class="mt-4 text-center">
+        <h4 class="text-blue-400 mb-3">
+          <i class="fas fa-phone-alt me-2 "></i>{{propertyContactData.propertyDetails.contactUs.phone || 'Number Not Available'}}
+        </h4>
+       
+        <h4 class="text-secondary mb-3">
+          <i class="fas fa-envelope me-2"></i>{{propertyContactData.propertyDetails.contactUs.email || 'Email Not Available'}}
+        </h4>
+        <h4 class="text-secondary mb-3">
+          <i class="fas fa-clock me-2"></i>{{"Open"+" "+propertyContactData.propertyDetails.officeHours.time || 'Hours Not Available'}}
+        </h4>
+        <h4 class="text-secondary">
+          <i class="fas fa-calendar-day me-2"></i>{{propertyContactData.propertyDetails.officeHours.workingDays || 'Days Not Available'}}
+        </h4>
+        
+      </div>
     </div>
   </div>
 </aside>
